--- a/Biletele.html
+++ b/Biletele.html
@@ -3,7 +3,9 @@
 <html>
 <head>
 	<title></title>
+	<script type="text/javascript" src="JQ2.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -14,7 +16,6 @@
 <section id="addingWords">
 	<p><span>Add your word here, please!</span>
 		<input type="text" id="addWords" name="inputBox">
-		<button id="addWord">Add Word</button>
 	</p>
 </section>
 
@@ -24,7 +25,7 @@
 </section>
 
 <section id="playerSection">
-	<p id="contestant"></p> <!--ToDo Acest paragraf se va completa dupa evenimentul click pe START. ATENTIE!! SA NU SUPRASCRIEM FUNCTIILE-->
+	<p id="contestant"></p> 
 	<p>You have <span id="timer">XX</span> seconds left!</p>
 	<p id="word">cuvantul de ghicit</p>
 	<button id="start">START</button>
@@ -64,5 +65,6 @@
 </section>
 
 <script type="text/javascript" src="dynamic.js"></script>
+
 </body>
 </html>
